1.2.0
- graphic: no more score thumbnail in player page and game page
- graphic: use avatar of NGF if avatar_id is setted in database
- feature: soccer score are now handled

1.1.1
- fix bug: Timeline RSS has not anymore same guid for all items.

1.1.0
- feature: Checkbox to post on NGF, or not
- feature: Picture is not post but put in score's URL
- fix bug: In HoF, when two players have same rank, the best "average" is the first one

1.0.1
- fix bug: titleService.hasScoreInGame

1.0.0
- fix bug: In "Add new score", the pre-selected game was not 3 Count Bout.
- feature: Score Comparator can compare chrono scores.
- feature: RSS timeline
- feature: Twitter timeline
- post scores in dedicated topics on NGF