@@ -28,58 +28,62 @@
                 xmlns:c="http://java.sun.com/jsp/jstl/core">
     <ui:define name="content_right">
         <h2>${playerBean.fullname}</h2>
-
-        <div class="wrapper">
-            <ul>
-                <c:forEach var="titleItem" items="#{playerBean.titles}">
-                    <li>
+        <table>
+            <tr>
+                <td style="vertical-align: top">
+                    <table>
+                    <c:forEach var="titleItem" items="#{playerBean.titles}">
+                        <tr>
+                            <td>
                         <h:link styleClass="button small black" rendered="${!titleItem.unlocked}" outcome="player/view" ><img src="${contextPathStatic}/myimages/lock_title.gif" /><h:outputText value=" ${titleItem.title.label}" title="${titleItem.title.description}"  /></h:link>
                         <h:link styleClass="button small blue" rendered="${titleItem.unlocked}" outcome="player/view" ><img src="${contextPathStatic}/myimages/unlocked_title.png" /><h:outputText value=" ${titleItem.title.label}" title="${titleItem.title.description}"  /></h:link>
-                    </li>
-                </c:forEach>
-            </ul> 
-        </div>
-        <br/>            
-        <br/>            
-        <table style="text-align: right; min-width:60%">
-            <tr>
-                <td></td>
-                <td>Level</td>
-                <td>Score</td>
-                <td></td>
-                <td>Rank</td>
-                <td></td>
-                <td></td>
+                            </td>
+                        </tr>
+                    </c:forEach>
+                    </table>
+                </td>
+                <td>
+                    <table style="text-align: right; min-width:60%">
+                        <tr>
+                            <td style="text-align: left">Games</td>
+                            <td>Level</td>
+                            <td>Score</td>
+                            <td>Rank</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <c:forEach var="score" items="#{playerBean.scores}">
+                            <tr>
+                                <td style="text-align: left">
+                                    <h:link styleClass="game" outcome="game" value="${score.game.name}">
+                                        <f:param name="id" value="${score.game.id}"/>
+                                    </h:link>
+                                </td>
+                                <td>
+                                    <h:outputText value="${score.level}" />
+                                </td>
+                                <td>
+                                    <h:link outcome="score/edit" styleClass="score" >
+                                        <h:outputText value="${score.value}" converter="scoreConverter" />    
+                                        <f:param name="scoreId" value="${score.id}" />
+                                    </h:link>
+                                </td>
+                                <td>
+                                    <h:outputText value="${score.rankNumber}" />
+                                </td>
+                                <td>
+                                    <h:outputText value="+" styleClass="positive-gap" rendered="${fn:length(score.positiveGap) > 0}" />
+                                    <h:outputText value="${score.positiveGap}" styleClass="positive-gap" converter="scoreConverter" />
+                                </td>
+                                <td>
+                                    <h:outputText value="-" styleClass="negative-gap" rendered="${fn:length(score.negativeGap) > 0}" />
+                                    <h:outputText value="${score.negativeGap}" styleClass="negative-gap" converter="scoreConverter" />
+                                </td>
+                            </tr>
+                        </c:forEach>
+                    </table>
+                </td>
             </tr>
-            <c:forEach var="score" items="#{playerBean.scores}">
-                <tr>
-                    <td style="text-align: left">
-                        <h:link styleClass="game" outcome="game" value="${score.game.name}">
-                            <f:param name="id" value="${score.game.id}"/>
-                        </h:link>
-                    </td>
-                    <td>
-                        <h:outputText value="${score.level}" />
-                    </td>
-                    <td>
-                        <h:link outcome="score/edit" styleClass="score" >
-                            <h:outputText value="${score.value}" converter="scoreConverter" />    
-                            <f:param name="scoreId" value="${score.id}" />
-                        </h:link>
-                    </td>
-                    <td>
-                        <h:outputText value="${score.rankNumber}" />
-                    </td>
-                    <td>
-                        <h:outputText value="+" styleClass="positive-gap" rendered="${fn:length(score.positiveGap) > 0}" />
-                        <h:outputText value="${score.positiveGap}" styleClass="positive-gap" converter="scoreConverter" />
-                    </td>
-                    <td>
-                        <h:outputText value="-" styleClass="negative-gap" rendered="${fn:length(score.negativeGap) > 0}" />
-                        <h:outputText value="${score.negativeGap}" styleClass="negative-gap" converter="scoreConverter" />
-                    </td>
-                </tr>
-            </c:forEach>
         </table>
     </ui:define>
 </ui:composition>
